ros2_ws/log/build_2026-03-25_11-43-38/p3_pkg/stderr.log
  File "/workspace/ros2_ws/install/p3_pkg/lib/python3.10/site-packages/p3_pkg/movimiento.py", line 1
    kkimport rclpy
             ^^^^^
SyntaxError: invalid syntax

